ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.6.11, 4.0.7, 4.1.6
    • Affects Version/s: 3.6.5
    • Component/s: Storage
    • None
    • Environment:
      Operating system: Ubuntu 16.04.4 LTS
      MongoDB version: v3.6.5
    • Fully Compatible
    • ALL
    • v4.0, v3.6
    • Storage NYC 2018-12-03
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      I have the following two databases:

      and configured Mongo to store each one in a separate folder:

      These two databases are stored under /mnt/disks/mongodb/data path. The data folder is also owned by mongodb user/group.

      I'm trying to run the following command for each database:

      In case of test it works fine, but in case of test-hyphen I get this error:

      Mongo cannot calculate fsUsedSize and fsTotalSize for this database. I suppose it is a bug related with a fact of translating the hyphen to ".45".

      Could you please confirm?

        1. 1.PNG
          1.PNG
          18 kB
        2. image-2018-06-21-22-12-58-104.png
          image-2018-06-21-22-12-58-104.png
          3 kB
        3. image-2018-06-21-22-15-36-518.png
          image-2018-06-21-22-15-36-518.png
          4 kB
        4. image-2018-06-21-22-16-28-048.png
          image-2018-06-21-22-16-28-048.png
          8 kB

            Assignee:
            Xiangyu Yao (Inactive)
            Reporter:
            Cezary Bartosiak
            Votes:
            0 Vote for this issue
            Watchers:
            16 Start watching this issue

              Created:
              Updated:
              Resolved: