SERVER-35732 Fix dbStats.fsUsedSize behavior for database with hyphenated names

(cherry picked from commit e0be8ba5aa04df21f6a9a42578a349a4c303776d)
(cherry picked from commit cdf15b6db2e30f51c785c8e2c56472e793a7db69)