src/mongo/db/storage/kv/kv_catalog.cpp
@@ -286,6 +286,14 @@ bool KVCatalog::_hasEntryCollidingWithRand() const {
     return false;
 }
 
+std::string KVCatalog::getFilesystemPathForDb(const std::string& dbName) const {
+    if (_directoryPerDb) {
+        return storageGlobalParams.dbpath + '/' + NamespaceString::escapeDbName(dbName);
+    } else {
+        return storageGlobalParams.dbpath;
+    }
+}
+
 std::string KVCatalog::_newUniqueIdent(StringData ns, const char* kind) {
     // If this changes to not put _rand at the end, _hasEntryCollidingWithRand will need fixing.
     StringBuilder buf;
