src/mongo/db/storage/kv/kv_storage_engine.cpp
@@ -232,6 +232,10 @@ KVStorageEngine::reconcileCatalogAndIdents(OperationContext* opCtx) {
     return ret;
 }
 
+std::string KVStorageEngine::getFilesystemPathForDb(const std::string& dbName) const {
+    return _catalog->getFilesystemPathForDb(dbName);
+}
+
 void KVStorageEngine::cleanShutdown() {
     for (DBMap::const_iterator it = _dbs.begin(); it != _dbs.end(); ++it) {
         delete it->second;
