src/mongo/db/storage/kv/kv_storage_engine.h
@@ -153,6 +153,8 @@ public:
     StatusWith<std::vector<StorageEngine::CollectionIndexNamePair>> reconcileCatalogAndIdents(
         OperationContext* opCtx) override;
 
+    std::string getFilesystemPathForDb(const std::string& dbName) const override;
+
 private:
     class RemoveDBChange;
 
