src/mongo/db/storage/mmap_v1/mmap_v1_engine.h
@@ -110,6 +110,8 @@ public:
         MONGO_UNREACHABLE;
     }
 
+    std::string getFilesystemPathForDb(const std::string& dbName) const override;
+
 private:
     static void _listDatabases(const std::string& directory, std::vector<std::string>* out);
 
